# wallpaper-changer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  uninstall.sh
data/: io.github.alnyz.WallpaperChanger.desktop  io.github.alnyz.WallpaperChanger.service
packaging/: PKGBUILD
qml/: HelpPanel.qml  Main.qml  SearchBar.qml  SettingsPanel.qml  Strip.qml  Tile.qml
src/: appcontroller.cpp  appcontroller.h  blurbridge.cpp  blurbridge.h  downloader.cpp  downloader.h  librarymodel.cpp  librarymodel.h  locallibrary.cpp  locallibrary.h  main.cpp  screeninfo.cpp  screeninfo.h  settings.cpp  settings.h  wallhavenclient.cpp  wallhavenclient.h  wallhavenparser.cpp  wallhavenparser.h  wallhavenquery.cpp  wallhavenquery.h  wallhavenresult.h  wallpapersetter.cpp  wallpapersetter.h
tests/: CMakeLists.txt  test_downloader.cpp  test_librarymodel.cpp  test_locallibrary.cpp  test_screeninfo.cpp  test_settings.cpp  test_wallhavenclient.cpp  test_wallhavenparser.cpp  test_wallhavenquery.cpp  test_wallpapersetter.cpp  test_wallpapersetter_apply.cpp
tests/fixtures/: wallhaven_search.json
